--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
 
 <body>
     <div class="one">
-        content
+        <p>
+            number 1
+        </p>
+        <input type="text" id="text1">
+        <br>
+        <p>number 2</p>
+        <input type="text" id="text2">
+        <br>
+        <button type="button">Add</button>
     </div>
 </body>
 
