--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="style.css">
 
-    <script src="java.js"></script>
+    <script src="javascript.js"></script>
 
 </head>
 
