function added sum()

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <p>number 2</p>
         <input type="text" id="text2">
         <br>
-        <button type="button">Add</button>
+        <button type="button" onclick="sum()">Add</button>
+        <p id="result"></p>
     </div>
 </body>
 
