--- a/index.html
+++ b/index.html
@@ -13,17 +13,10 @@
 </head>
 
 <body>
-    <div class="one">
-        <p>
-            number 1
-        </p>
-        <input type="text" id="text1">
+    <div class="login">
+        <input type="text" id="user_name">
         <br>
-        <p>number 2</p>
-        <input type="text" id="text2">
-        <br>
-        <button type="button" onclick="sum()">Add</button>
-        <p id="result"></p>
+        <button type="button">Login</button>
     </div>
 </body>
 
