--- a/index.html
+++ b/index.html
@@ -4,12 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test VAMK Project</title>
-
+    <title>TRINITY Project</title>
     <link rel="stylesheet" href="style.css">
-
-    <script src="javascript.js"></script>
-
+    <script src="main.js"></script>
 </head>
 
 <body>
@@ -17,6 +14,12 @@
         <input type="text" id="user_name">
         <br>
         <button type="button">Login</button>
+    </div>
+
+    <div class="table_content">
+        <table id="table_main">
+
+        </table>
     </div>
 </body>
 
