filder by Urder ID is ready

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
         <button type="button">Login</button>
     </div>
 
+    <div class="filters">
+        <p>Filters</p>
+        <label for="orderid">Order ID</label> <br>
+        <input type="text" name="orderid" id="orderid" onkeyup="fetchOrder(1)"><br>
+
+    </div>
     <div class="table_content">
         <table id="table_main">
 
