customer ID and customer name added and order list as a table for now

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         <p>Filters</p>
         <label for="orderid">Order ID</label> <br>
         <input type="text" name="orderid" id="orderid" onkeyup="fetchOrder(1)"><br>
+        <label for="customerid">Customer ID</label> <br>
+        <input type="text" name="customerid" id="customerid" onkeyup="fetchOrder(2)"><br>
+        <label for="customer">Customer name</label> <br>
+        <input type="text" name="customer" id="customer" onkeyup="fetchOrder(3)"><br>
 
     </div>
     <div class="table_content">
