login form validation is partly resdy and now you can login with 3 users names check the login.js with users names

--- a/login.html
+++ b/login.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="login.css">
+    <script src="login.js"></script>
 </head>
 
 <body>
-    <form action="action_page.php" method="post">
+    <form action="http://www.cc.puv.fi/~e2000594/" method="POST">
         <div class="imgcontainer">
             <?xml version="1.0" encoding="iso-8859-1"?>
             <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
@@ -88,23 +89,21 @@
 
         <div class="container">
 
-            <label for="uname"><b>Username</b></label>
-            <input type="text" placeholder="Enter Username" name="uname" required>
-
-            <label for="psw"><b>Password</b></label>
-            <input type="password" placeholder="Enter Password" name="psw" required>
-
-            <button type="submit">Login</button>
+            <label for="username"><b>Username</b></label>
+            <input type="text" placeholder="Enter Username" name="username">
+            <span></span>
+            <br>
+            <label for="password"><b>Password</b></label>
+            <input type="password" placeholder="Enter Password" name="password">
+            <span></span> <br>
+            <button id="login">Login</button>
             <label>
         <input type="checkbox" checked="checked" name="remember"> Remember me
       </label>
         </div>
-
-        <div class="container" style="background-color:#f1f1f1">
-            <button type="button" class="cancelbtn">Cancel</button>
-            <span class="psw">Forgot <a href="#">password?</a></span>
-        </div>
     </form>
+
+    <p id="alarm"></p>
 </body>
 
 </html>
