--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <form action="http://www.cc.puv.fi/~e2000594/" method="POST">
+    <form action="index.html" method="POST">
         <div class="imgcontainer">
             <?xml version="1.0" encoding="iso-8859-1"?>
             <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
