--- a/html/index.html
+++ b/html/index.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="login.css">
-    <script src="login.js"></script>
+    <link rel="stylesheet" href="/CSS/login.css">
+    <script src="/JS/login.js"></script>
 </head>
 
 <body>
-    <form action="http://www.cc.puv.fi/~e2000594/" method="POST">
-        <div class="imgcontainer">
-            <?xml version="1.0" encoding="iso-8859-1"?>
-            <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-            <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 480.144 480.144" style="enable-background:new 0 0 480.144 480.144;" xml:space="preserve">
+    <!-- <form action="" method="POST"> -->
+    <div class="imgcontainer">
+        <?xml version="1.0" encoding="iso-8859-1"?>
+        <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+        <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 480.144 480.144" style="enable-background:new 0 0 480.144 480.144;" xml:space="preserve">
           <path style="fill:#CCCCCC;" d="M456.072,448.144v-320c0-13.255-10.745-24-24-24h-384c-13.255,0-24,10.745-24,24v320H456.072z"/>
           <path style="fill:#999999;" d="M472.072,424.144v24c0,13.255-10.745,24-24,24l0,0h-416c-13.255,0-24-10.745-24-24l0,0v-24h160l16,16
             h112l16-16H472.072z"/>
@@ -85,23 +85,23 @@
           </g>
           </svg>
 
-        </div>
+    </div>
 
-        <div class="container">
+    <div class="container">
 
-            <label for="username"><b>Username</b></label>
-            <input type="text" placeholder="Enter Username" name="username">
-            <span></span>
-            <br>
-            <label for="password"><b>Password</b></label>
-            <input type="password" placeholder="Enter Password" name="password">
-            <span></span> <br>
-            <button id="login">Login</button>
-            <label>
+        <label for="username"><b>Username</b></label>
+        <input type="text" placeholder="Enter Username" name="username">
+        <span></span>
+        <br>
+        <label for="password"><b>Password</b></label>
+        <input type="password" placeholder="Enter Password" name="password">
+        <span></span> <br>
+        <button id="login">Login</button>
+        <label>
         <input type="checkbox" checked="checked" name="remember"> Remember me
       </label>
-        </div>
-    </form>
+    </div>
+    <!-- </form> -->
 
     <p id="alarm"></p>
 </body>
