--- a/html/orders.html
+++ b/html/orders.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TRINITY Project</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="main.js"></script>
+    <link rel="stylesheet" href="/CSS/style.css">
+    <script src="/JS/main.js"></script>
 </head>
 
 <body>
+    <div class="nav">
+        <a href="/html//landing.html">HOME</a>
+    </div>
     <div class="filters">
         <p>Filters</p>
         <label for="orderid">Order ID</label> <br>
