--- a/html/index.html
+++ b/html/index.html
@@ -10,19 +10,11 @@
 </head>
 
 <body>
-<<<<<<< HEAD:html/index.html
     <!-- <form action="" method="POST"> -->
     <div class="imgcontainer">
         <?xml version="1.0" encoding="iso-8859-1"?>
-        <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+        <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0  --->
         <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 480.144 480.144" style="enable-background:new 0 0 480.144 480.144;" xml:space="preserve">
-=======
-    <form action="index.html" method="POST">
-        <div class="imgcontainer">
-            <?xml version="1.0" encoding="iso-8859-1"?>
-            <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-            <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 480.144 480.144" style="enable-background:new 0 0 480.144 480.144;" xml:space="preserve">
->>>>>>> f33183b10705caa2fffd197ba323748a9303edcb:login.html
           <path style="fill:#CCCCCC;" d="M456.072,448.144v-320c0-13.255-10.745-24-24-24h-384c-13.255,0-24,10.745-24,24v320H456.072z"/>
           <path style="fill:#999999;" d="M472.072,424.144v24c0,13.255-10.745,24-24,24l0,0h-416c-13.255,0-24-10.745-24-24l0,0v-24h160l16,16
             h112l16-16H472.072z"/>
