lot of refactoring, orderdetails is working

--- a/html/orderdetails.html
+++ b/html/orderdetails.html
@@ -5,11 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Order details</title>
+    <link rel="stylesheet" href="/CSS/style.css">
+    <script src="/JS/main.js"></script>
 </head>
 
-<body>
+<body onload="getOrder()">
     <div class="content-1">
-        Order details
+        <h1 style="text-align: center;">HERE COMES ORDER DETAILS</h1> <br>
+        <a href="/html/landing.html">HOME</a>
+        <br>
+        <a href="/html/orders.html">Orders</a>
+    </div>
+
+    <div class="table_content">
+        <table id="table_main">
+
+        </table>
     </div>
 </body>
 
