--- a/html/products.html
+++ b/html/products.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Products</title>
+    <link rel="stylesheet" href="/CSS/style.css">
 </head>
 
 <body>
     <div class="products">
-        Table here
-        <a href="/html/landing.html">HOME</a>
+        Table here <br>
+        <a href="/html/landing.html">HOME</a> <br>
+        <a href="/html/orders.html">Orders</a>
     </div>
 </body>
 
