--- a/html/orders.html
+++ b/html/orders.html
@@ -7,20 +7,35 @@
     <title>TRINITY Project</title>
     <link rel="stylesheet" href="/CSS/style.css">
     <script src="/JS/main.js"></script>
+
 </head>
 
-<body>
+<body onload="fetchOrder(0,0)">
     <div class="nav">
         <a href="/html//landing.html">HOME</a>
     </div>
     <div class="filters">
-        <p>Filters</p>
-        <label for="orderid">Order ID</label> <br>
+        <p class="titles center"> Filters</p>
+        <ul>
+            <li>
+                <input type="text" name="orderid" id="orderid" onkeyup="fetchOrder(1)">
+                <label for="orderid">Order ID</label>
+            </li>
+            <li>
+                <input type="text" name="customerid" id="customerid" onkeyup="fetchOrder(2)">
+                <label for="customerid">Customer ID</label>
+            </li>
+            <li>
+                <input type="text" name="customer" id="customer" onkeyup="fetchOrder(3)">
+                <label for="customer">Customer name</label>
+            </li>
+        </ul>
+        <!-- <label for="orderid">Order ID</label> <br>
         <input type="text" name="orderid" id="orderid" onkeyup="fetchOrder(1)"><br>
         <label for="customerid">Customer ID</label> <br>
         <input type="text" name="customerid" id="customerid" onkeyup="fetchOrder(2)"><br>
         <label for="customer">Customer name</label> <br>
-        <input type="text" name="customer" id="customer" onkeyup="fetchOrder(3)"><br>
+        <input type="text" name="customer" id="customer" onkeyup="fetchOrder(3)"><br> -->
 
     </div>
     <div class="table_content">
