--- a/html/index.html
+++ b/html/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="/CSS/login.css">
-    <script src="/JS/login.js"></script>
+    <script src="/JS/main.js"></script>
 </head>
 
-<body>
+<body onload="login()">
     <!-- <form action="" method="POST"> -->
     <div class="imgcontainer">
         <?xml version="1.0" encoding="iso-8859-1"?>
