--- a/html/orderdetails.html
+++ b/html/orderdetails.html
@@ -12,10 +12,12 @@
 <body onload="getOrder()">
 
     <div class="content-1">
-        <h1 style="text-align: center;">HERE COMES ORDER DETAILS</h1> <br>
         <a href="/html/landing.html">HOME</a>
         <br>
         <a href="/html/orders.html">Orders</a>
+        <br>
+        <h1 style="text-align: center;">ORDER DETAILS</h1>
+
     </div>
 
     <div class="order_details">
@@ -42,6 +44,7 @@
 
         </div>
 
+
     </div>
 
     <div class="table_cont">
@@ -50,7 +53,8 @@
         </table>
     </div>
     <div id="ready_order">
-        <button type="button" onclick="buttonReady()">Ready</button>
+        <button type="button" class="block_button" onclick="buttonReady()">Ready</button>
+        <button type="button" class="block_button print_button" onclick="buttonReady()">Print</button>
     </div>
 </body>
 
