--- a/- Other Data/Front-End/landing.html
+++ b/- Other Data/Front-End/landing.html
@@ -70,28 +70,26 @@
 
 <div class="container p-5">
 
-    <section id="loginBox">
+    <section id="landingBox">
 
         <div class="row">
 
             <div class="col-md-6 py-md-5 my-lg-5 order-md-1 order-sm-2 order-xs-2">
 
-                <form class="text-center" action="#">
+                <p class="h4 mb-4">Welcome <span class="tealFont fst-italic">Morpheus</span>, to The Matrix</p>
+                <p class="h4 mb-4">Role: <span class="tealFont fst-italic">Warehouse Manager</span></p>
 
-                    <p class="h4 mb-4">Login</p>
+                <div class="row py-5">
 
-                    <input type="text" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="Username">
-
-                    <!-- Password -->
-                    <input type="password" id="defaultLoginFormPassword" class="form-control mb-4" placeholder="Password">
-
-                    <div class="d-flex justify-content-around">
-
-                        <button class="btn btn-info btn-block my-4 tealColor tealShadow" type="submit">Login</button>
-
+                    <div class="col-6">
+                        <a href="products.html" target="_self"><img src="assets/images/productlist.png" alt=""></a>
+                    </div>
+                    <div class="col-6">
+                        <a href="orders.html" target="_self"><img src="assets/images/orderlist.png" alt=""></a>
                     </div>
 
-                </form>
+
+                </div>
 
             </div>
 
