--- a/- Other Data/Front-End/products.html
+++ b/- Other Data/Front-End/products.html
@@ -53,6 +53,14 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">Support</a>
                     </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+                            <img src="assets/images/user-female.png" alt="" class="rounded-circle">
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="#">Logout</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
             </div>
