--- a/- Other Data/Front-End/index.html
+++ b/- Other Data/Front-End/index.html
@@ -97,7 +97,7 @@
 
             <div class="col-md-6 order-md-2 order-sm-1  order-xs-1">
 
-                <img src="assets/images/loginpageimg.svg" alt="" style="width: 100%;">
+                <img src="assets/images/loginpageimg.svg" alt="" class="w-100">
 
             </div>
         </div>
