--- a/html/orderdetails(draft).html
+++ b/html/orderdetails(draft).html
@@ -54,7 +54,7 @@
     </div>
     <div id="ready_order">
         <button type="button" class="block_button" onclick="buttonReady()">Ready</button>
-        <button type="button" class="block_button print_button" onclick="buttonReady()">Print</button>
+        <button type="button" class="block_button print_button">Print</button>
     </div>
 </body>
 
