functions are refactored and havy commented

--- a/- Other Data/Front-End/orderdetails.html
+++ b/- Other Data/Front-End/orderdetails.html
@@ -27,7 +27,7 @@
 
 </head>
 
-<body onload="getOrder()">
+<body onload="fetchOrder('details')">
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
