--- a/- Other Data/Front-End/orders.html
+++ b/- Other Data/Front-End/orders.html
@@ -27,7 +27,7 @@
 
 </head>
 
-<body onload="fetchOrder(1)">
+<body onload="fetchOrder('main')">
 
     <nav class=" navbar navbar-expand-lg navbar-light bg-light ">
 
@@ -82,23 +82,23 @@
             <div class="row pb-2 ">
 
                 <div class="col-sm-12 col-md-3 pt-sm-3 pt-2 ">
-                    <input type="text " name=" " id="orderid" placeholder="Order ID " onkeyup="fetchOrder(1)">
+                    <input type="text " name=" " id="orderid" placeholder="Order ID " onkeyup="fetchOrder('main')">
                 </div>
 
                 <div class="col-sm-12 col-md-3 pt-sm-3 pt-2 ">
-                    <input type="text " name=" " id="customerid" placeholder="Customer ID " onkeyup="fetchOrder(1)">
+                    <input type="text " name=" " id="customerid" placeholder="Customer ID " onkeyup="fetchOrder('main')">
                     <span class="focus-border ">
                 </div>
                 
                 <div class="col-sm-12 col-md-3 pt-sm-3 pt-2 ">
                     <!-- refactor to delivery date filter -->
-                    <input type="text " name=" " id="customer" placeholder="Customer Name" onkeyup="fetchOrder(1)">
+                    <input type="text " name=" " id="customer" placeholder="Customer Name" onkeyup="fetchOrder('main')">
                     <span class="focus-border ">
                 </div>
 
                 <div class="col-sm-12 col-md-3 pt-sm-3 pt-2 ">
                     <!-- refactor to delivery date filter -->
-                    <input type="text " name=" " id="deliverydate" placeholder="Delivery Date " onkeyup="fetchOrder(1)">
+                    <input type="text " name=" " id="deliverydate" placeholder="Delivery Date " onkeyup="fetchOrder('main')">
                     <span class="focus-border ">
                 </div>
 
