--- a/- Other Data/Front-End/orderdetails.html
+++ b/- Other Data/Front-End/orderdetails.html
@@ -112,7 +112,7 @@
                     <span class="highlight pr-5">Customer Comments: "<span class="content" id="comment">please send as soon as possible</span>"</span>
                 </div>
                 <div class="d-flex flex-row pb-3">
-                    <span class="highlight pr-5">STATUS: <span class="content" id="show_status"></span></span>
+                    <span class="highlight pr-5">Status: <span class="content" id="show_status"></span></span>
                 </div>
                 <div class="d-flex flex-row">
                     <input type="text-area" placeholder="Add Packing Comments" class="highlight pr-5">
