Add filter products by ID

--- a/html/products.html
+++ b/html/products.html
@@ -18,15 +18,15 @@
         <p class="titles center"> Product Search</p>
         <ul>
             <li>
-                <input type="text" name="productid" id="productid" placeholder="Product ID..">
+                <input type="text" name="productid" id="product-id" placeholder="Product ID..">
             </li>
             <li>
-                <input type="text" name="supplierid" id="supplierid" placeholder="Supplier ID..">
+                <input type="text" name="supplierid" id="supplier-id" placeholder="Supplier ID..">
             </li>
             <li>
-                <input type="text" name="shelfposition" id="shelfposition" placeholder="Shelf Position..">
+                <input type="text" name="shelfposition" id="shelf-position" placeholder="Shelf Position..">
             </li>
-            <li><button>Search</button></li>
+            <li><button onclick="filterProducts()">Search</button></li>
         </ul>
     </div>
 
@@ -38,8 +38,8 @@
             <th>Unit Price</th>
             <th>Shelf Position</th>
         </tr>
-        </table>
-    
+    </table>
+
 </body>
 
 </html>
