--- a/- Other Data/Front-End/index.html
+++ b/- Other Data/Front-End/index.html
@@ -24,12 +24,11 @@
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
-
 </head>
 
 <body onload="login()">
 
-    <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         
         <div class="container">
             <a class="navbar-brand" href="#">
@@ -38,38 +37,11 @@
                 The Matrix
             </a>
 
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mb-2 mb-lg-0 ml-auto align-items-center">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="Home" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="products.html">Products</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="orders.html">Orders</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Support</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
-                            <img src="assets/images/user-female.png" alt="" class="rounded-circle">
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Logout</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
+            <div class="m-4 p-2">
             </div>
         </div>
         
-    </nav> -->
+    </nav>
 
     <div class="container p-5">
 
@@ -100,7 +72,7 @@
 
                 </div>
 
-                <div class="col-md-6 order-md-2 order-sm-1  order-xs-1">
+                <div class="col-md-6 order-md-2 order-sm-1 order-xs-1">
 
                     <img src="assets/images/loginpageimg.svg" alt="" class="w-100">
 
