--- a/- Other Data/Front-End/orders.html
+++ b/- Other Data/Front-End/orders.html
@@ -13,6 +13,9 @@
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/bf8b3e6041.js" crossorigin="anonymous"></script>
 
+    <!-- The Matrix integration -->
+    <script src="/JS/main.js"></script>
+
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-CuOF+2SnTUfTwSZjCXf01h7uYhfOBuxIhGKPbfEJ3+FqH/s6cIFN9bGr1HmAg4fQ" crossorigin="anonymous">
 
@@ -21,38 +24,34 @@
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
-
-    <!-- Matrix start -->
-    <script src="/JS/main.js"></script>
-
 </head>
 
 <body onload="fetchOrder('main')">
 
-    <nav class=" navbar navbar-expand-lg navbar-light bg-light ">
+    <nav class=" navbar navbar-expand-lg navbar-light bg-light">
 
-        <div class="container ">
-            <a class="navbar-brand " href="# ">
-                <img src="assets/images/logo.svg " width="30 " height="30 " class="d-inline-block align-top " alt=" " loading="lazy "> The Matrix
+        <div class="container">
+            <a class="navbar-brand" href="#">
+                <img src="assets/images/logo.svg" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy"> The Matrix
             </a>
 
-            <button class="navbar-toggler " type="button " data-toggle="collapse " data-target="#navbarSupportedContent " aria-controls="navbarSupportedContent " aria-expanded="false " aria-label="Toggle navigation ">
-                <span class="navbar-toggler-icon "></span>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div class="collapse navbar-collapse " id="navbarSupportedContent ">
-                <ul class="navbar-nav mb-2 mb-lg-0 ml-auto align-items-center ">
-                    <li class="nav-item ">
-                        <a class="nav-link " href="landing.html ">Home</a>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mb-2 mb-lg-0 ml-auto align-items-center">
+                    <li class="nav-item">
+                        <a class="nav-link" href="landing.html">Home</a>
                     </li>
-                    <li class="nav-item ">
-                        <a class="nav-link " href="products.html ">Products</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="products.html">Products</a>
                     </li>
-                    <li class="nav-item ">
-                        <a class="nav-link active " aria-current="Orders " href="# ">Orders</a>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="Orders" href="#">Orders</a>
                     </li>
-                    <li class="nav-item ">
-                        <a class="nav-link " href="# ">Support</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Support</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
@@ -63,7 +62,6 @@
                         </ul>
                 </ul>
             </div>
-        </div>
         </div>
 
     </nav>
@@ -82,41 +80,41 @@
             <div class="row pb-2">
 
                 <div class="col-sm-12 col-md-3 pt-sm-3 pt-2">
-                    <input type="text" name=" " id="orderid" placeholder="Order ID" onkeyup="fetchOrder('main')">
+                    <input type="text" name="" id="orderid" placeholder="Order ID" onkeyup="fetchOrder('main')">
                 </div>
 
                 <div class="col-sm-12 col-md-3 pt-sm-3 pt-2">
-                    <input type="text" name=" " id="customerid" placeholder="Customer ID" onkeyup="fetchOrder('main')">
-                    <span class="focus-border ">
+                    <input type="text" name="" id="customerid" placeholder="Customer ID" onkeyup="fetchOrder('main')">
+                    <span class="focus-border">
                 </div>
                 
                 <div class="col-sm-12 col-md-3 pt-sm-3 pt-2">
                     <!-- refactor to delivery date filter -->
-                    <input type="text" name=" " id="customer" placeholder="Customer Name" onkeyup="fetchOrder('main')">
-                    <span class="focus-border ">
+                    <input type="text" name="" id="customer" placeholder="Customer Name" onkeyup="fetchOrder('main')">
+                    <span class="focus-border">
                 </div>
 
                 <div class="col-sm-12 col-md-3 pt-sm-3 pt-2">
                     <!-- refactor to delivery date filter -->
-                    <input type="text" name=" " id="deliverydate" placeholder="Delivery Date" onkeyup="fetchOrder('main')">
-                    <span class="focus-border ">
+                    <input type="text" name="" id="deliverydate" placeholder="Delivery Date" onkeyup="fetchOrder('main')">
+                    <span class="focus-border">
                 </div>
 
-                <!-- <div class="col-sm-12 col-md-3 pt-sm-5 pt-md-2 ">
-                    <button class="btn btn-info btn-block tealColor tealShadow " type="submit ">Search</button>
+                <!-- <div class="col-sm-12 col-md-3 pt-sm-5 pt-md-2">
+                    <button class="btn btn-info btn-block tealColor tealShadow" type="submit">Search</button>
                 </div> -->
 
             </div>
 
-            <div class="row pt-5 ">
+            <div class="row pt-5">
                 
-                <div class="card my-4 ">
-                    <div class="card-body ">
+                <div class="card my-4">
+                    <div class="card-body">
                         <!--Table-->
-                        <table class="table table-hover " id="table_main">
+                        <table class="table table-hover" id="table_main">
                             <!--Table head-->
-                            <!-- <thead class="tealColor ">
-                                <tr class="text-white ">
+                            <!-- <thead class="tealColor">
+                                <tr class="text-white">
                                     <th>Order ID</th>
                                     <th>Customer ID</th>
                                     <th>Delivery Address</th>
@@ -196,10 +194,10 @@
     </div>
 
 <!-- Footer -->
-<footer class="page-footer font-small tealColor fixed-bottom ">
+<footer class="page-footer font-small tealColor fixed-bottom">
 
     <!-- Copyright -->
-    <div class="footer-copyright text-center py-3 ">© 2020 The Matrix</div>
+    <div class="footer-copyright text-center py-3">© 2020 The Matrix</div>
     <!-- Copyright -->
 
 </footer>
@@ -208,7 +206,7 @@
 
 
     <!-- Bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha3/dist/js/bootstrap.bundle.min.js " integrity="sha384-popRpmFF9JQgExhfw5tZT4I9/CI5e2QcuUZPOVXb1m7qUmeR2b50u+YFEYe1wgzy " crossorigin="anonymous "></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-popRpmFF9JQgExhfw5tZT4I9/CI5e2QcuUZPOVXb1m7qUmeR2b50u+YFEYe1wgzy" crossorigin="anonymous"></script>
 
 
 </body>
