--- a/- Other Data/Front-End/products.html
+++ b/- Other Data/Front-End/products.html
@@ -13,6 +13,9 @@
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/bf8b3e6041.js" crossorigin="anonymous"></script>
 
+    <!-- The Matrix integration -->
+    <script src="/JS/main.js"></script>
+
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-CuOF+2SnTUfTwSZjCXf01h7uYhfOBuxIhGKPbfEJ3+FqH/s6cIFN9bGr1HmAg4fQ" crossorigin="anonymous">
 
@@ -21,10 +24,6 @@
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
-
-    <!-- Matrix start -->
-    <script src="/JS/main.js"></script>
-
 </head>
 
 <body onload="loadProducts()">
@@ -64,7 +63,6 @@
                     </li>
                 </ul>
             </div>
-        </div>
         </div>
 
     </nav>
