--- a/- Other Data/Front-End/index.html
+++ b/- Other Data/Front-End/index.html
@@ -13,7 +13,7 @@
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/bf8b3e6041.js" crossorigin="anonymous"></script>
 
-    <!-- The Matrix integration -->
+    <!-- JavaScript Functionality -->
     <script src="/JS/main.js"></script>
 
     <!-- Bootstrap -->
