--- a/- Other Data/Front-End/orders.html
+++ b/- Other Data/Front-End/orders.html
@@ -13,7 +13,7 @@
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/bf8b3e6041.js" crossorigin="anonymous"></script>
 
-    <!-- The Matrix integration -->
+    <!-- JavaScript Functionality -->
     <script src="/JS/main.js"></script>
 
     <!-- Bootstrap -->
@@ -51,7 +51,7 @@
                         <a class="nav-link active" aria-current="Orders" href="#">Orders</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Support</a>
+                        <a class="nav-link" href="support.html">Support</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
