--- a/- Other Data/Front-End/support.html
+++ b/- Other Data/Front-End/support.html
@@ -44,7 +44,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mb-2 mb-lg-0 ml-auto align-items-center">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="Home" href="#">Home</a>
+                        <a class="nav-link" aria-current="Home" href="#">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="products.html">Products</a>
@@ -53,14 +53,14 @@
                         <a class="nav-link" href="orders.html">Orders</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Support</a>
+                        <a class="nav-link active" href="#">Support</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
                             <img src="assets/images/user-female.png" alt="" class="rounded-circle">
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Logout</a></li>
+                        <li><a class="dropdown-item" href="index.html">Logout</a></li>
                         </ul>
                     </li>
                 </ul>
