--- a/- Other Data/Front-End/orderdetails.html
+++ b/- Other Data/Front-End/orderdetails.html
@@ -78,13 +78,18 @@
 
         <section id="ordersDetailsBox">
 
+            <div id="printThisPart">
+
             <div class="row">
                 <div class="col-auto mr-auto pt-sm-5 pt-md-2">
                     <h3>Order Details</h3>
                 </div>
 
-                <div class="col-auto pt-sm-5 pt-md-2">
+                <div class="col-auto pt-sm-5 pt-md-2" id="doNotPrint">
                     <button class="btn btn-info btn-block tealShadow tealColor" type="submit" onclick="buttonReady()">Order Ready</button>
+
+                    <img class="printIcon pl-5" src="assets/images/printIcon.png" onClick="window.print()">
+
                 </div>
 
             </div>
@@ -211,6 +216,8 @@
                     </div>
                 </div>
             </div>
+
+        </div>
 
 
         </section>
