--- a/- Other Data/Front-End/support.html
+++ b/- Other Data/Front-End/support.html
@@ -29,12 +29,10 @@
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        
+
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="assets/images/logo.svg" width="30" height="30" class="d-inline-block align-top" alt=""
-                    loading="lazy">
-                The Matrix
+                <img src="assets/images/logo.svg" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy"> The Matrix
             </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,7 +42,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mb-2 mb-lg-0 ml-auto align-items-center">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="Home" href="#">Home</a>
+                        <a class="nav-link" aria-current="Home" href="landing.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="products.html">Products</a>
@@ -60,13 +58,13 @@
                             <img src="assets/images/user-female.png" alt="" class="rounded-circle">
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="index.html">Logout</a></li>
+                            <li><a class="dropdown-item" href="index.html">Logout</a></li>
                         </ul>
                     </li>
                 </ul>
             </div>
         </div>
-        
+
     </nav>
 
     <div class="container p-5">
@@ -80,13 +78,11 @@
             <div class="accordion accordion-flush" id="accordionExample">
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingOne">
-                        <button class="accordion-button collapsed" type="button" data-toggle="collapse" data-target="#collapseOne"
-                            aria-expanded="false" aria-controls="collapseOne">
+                        <button class="accordion-button collapsed" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                             How to search orders
                         </button>
                     </h2>
-                    <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
-                        data-parent="#accordionExample">
+                    <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
                         <div class="accordion-body">
                             <strong>1.</strong> Post login proceed to Orders Page.<br>
                             <strong>2.</strong> Once in Orders Page click on the box with which search criteria you would like to find an order with. (Order ID / Customer ID / Customer Name / Delivery Date).
@@ -99,13 +95,11 @@
                 </div>
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingTwo">
-                        <button class="accordion-button collapsed" type="button" data-toggle="collapse"
-                            data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        <button class="accordion-button collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                             How to search products
                         </button>
                     </h2>
-                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
-                        data-parent="#accordionExample">
+                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                         <div class="accordion-body">
                             <strong>1.</strong> Post login proceed to Products Page.<br>
                             <strong>2.</strong> Once in Products Page click on the box with which search criteria you would like to find an order with. (Product ID / Supplier ID / Shelf Position).
