--- a/- Other Data/Front-End/orderdetails.html
+++ b/- Other Data/Front-End/orderdetails.html
@@ -14,7 +14,7 @@
     <script src="https://kit.fontawesome.com/bf8b3e6041.js" crossorigin="anonymous"></script>
 
     <!-- JavaScript Functionality -->
-    <script src="/JS/main.js"></script>
+    <script src="assets/js/main.js"></script>
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-CuOF+2SnTUfTwSZjCXf01h7uYhfOBuxIhGKPbfEJ3+FqH/s6cIFN9bGr1HmAg4fQ" crossorigin="anonymous">
@@ -79,6 +79,8 @@
         <section id="ordersDetailsBox">
 
             <div id="printThisPart">
+
+            <img src="assets/images/logo.svg" width="150" height="150" class="" id="printThisPart2">
 
             <div class="row">
                 <div class="col-auto mr-auto pt-sm-5 pt-md-2">
