--- a/- Other Data/Front-End/productdetails.html
+++ b/- Other Data/Front-End/productdetails.html
@@ -14,7 +14,7 @@
     <script src="https://kit.fontawesome.com/bf8b3e6041.js" crossorigin="anonymous"></script>
 
     <!-- JavaScript Functionality -->
-    <script src="/JS/main.js"></script>
+    <script src="assets/js/main.js"></script>
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-CuOF+2SnTUfTwSZjCXf01h7uYhfOBuxIhGKPbfEJ3+FqH/s6cIFN9bGr1HmAg4fQ" crossorigin="anonymous">
@@ -24,7 +24,6 @@
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
-
 </head>
 
 <body onload="loadProduct()">
@@ -46,10 +45,10 @@
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="products.html">Products</a>
+                        <a class="nav-link active" href="products.html">Products</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="Orders" href="#">Orders</a>
+                        <a class="nav-link" aria-current="Orders" href="#">Orders</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="support.html">Support</a>
