--- a/- Other Data/Front-End/support.html
+++ b/- Other Data/Front-End/support.html
@@ -14,7 +14,7 @@
     <script src="https://kit.fontawesome.com/bf8b3e6041.js" crossorigin="anonymous"></script>
 
     <!-- JavaScript Functionality -->
-    <script src="/JS/main.js"></script>
+    <script src="assets/js/main.js"></script>
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-CuOF+2SnTUfTwSZjCXf01h7uYhfOBuxIhGKPbfEJ3+FqH/s6cIFN9bGr1HmAg4fQ" crossorigin="anonymous">
@@ -106,6 +106,7 @@
                             <div class="card m-2 p-2">
                                 <img src="assets/images/supportImg2.png">
                             </div><br>
+                            <strong>3.</strong> Click on the product to see further details of the same.<br>
                         </div>
                     </div>
                 </div>
