--- a/- Other Data/Front-End/index.html
+++ b/- Other Data/Front-End/index.html
@@ -29,18 +29,16 @@
 <body onload="login()">
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        
+
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="assets/images/logo.svg" width="30" height="30" class="d-inline-block align-top" alt=""
-                    loading="lazy">
-                The Matrix
+                <img src="assets/images/logo.svg" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy"> The Matrix
             </a>
 
             <div class="m-4 p-2">
             </div>
         </div>
-        
+
     </nav>
 
     <div class="container p-5">
@@ -55,11 +53,11 @@
 
                         <p class="h4 mb-4">Login</p>
 
-                        <input type="text" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="Username">
+                        <input type="text" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="John Doe">
                         <span></span> <br>
 
                         <!-- Password -->
-                        <input type="password" id="defaultLoginFormPassword" class="form-control mb-4" placeholder="Password">
+                        <input type="password" id="defaultLoginFormPassword" class="form-control mb-4" placeholder="matrix">
                         <span></span> <br>
 
                         <div class="d-flex justify-content-around">
