--- a/- Production/index.html
+++ b/- Production/index.html
@@ -31,7 +31,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
         <div class="container">
-            <a class="navbar-brand" href="landing.html">
+            <a class="navbar-brand">
                 <img src="assets/images/logo.svg" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy"> The Matrix
             </a>
 
