--- a/- Production/presentation/presentation.html
+++ b/- Production/presentation/presentation.html
@@ -154,7 +154,7 @@
                 <div class="wrap">
                     <div class="content-left">
                         <h2><strong>Ready to take the red pill?</strong></h2>
-                        <a href="#" class="button" title="Enter The Matrix">
+                        <a href="../index.html" class="button" title="Enter The Matrix">
                             Enter The Matrix
                         </a>
                     </div>
